--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -47,8 +47,8 @@
     .footer-img-div {
 
         background      : var(--new-header-color) !important;
-        padding         : 5px !important;
-        width: 60% !important;
+        padding         : 5px 21px !important;
+        width: 50% !important;
         // padding-right: 10px !important;
     }
 }
