--- a/src/assets/scss/_homePageModule.scss
+++ b/src/assets/scss/_homePageModule.scss
@@ -402,7 +402,10 @@
 }
 .home-page-container .footer-home-div .footer-img-div{
   background-color: transparent !important;
+  width: 16% !important;
 }
+
+
 
 // responsive css
 
