--- a/src/assets/scss/_sumDqr.scss
+++ b/src/assets/scss/_sumDqr.scss
@@ -25,7 +25,7 @@
         }
         .dqr-card-body{
             // background-color: var(--primary-bg-color) !important;
-            background: transparent;
+            // background: transparent;
             font-family: var(--heading-font-family);
             color: var(--innertext-font-color) !important;
             font-size: var(--font-size-p-normal-text);
