--- a/src/assets/scss/_summarysection.scss
+++ b/src/assets/scss/_summarysection.scss
@@ -16,6 +16,12 @@
 		-webkit-line-clamp: 1;
 		-webkit-box-orient: vertical;
 	}
+
+	// .summary-key{
+	// 	.b-overlay{
+	// 		max-height: 200px;
+	// 	}
+	// }
 }
 
 .equalTosign{
@@ -179,6 +185,10 @@
 		.biggest-number{
 			font-size: 12px !important;
 		}
+
+		.bigger-number {
+			font-size: 8px !important;
+		  }
 	}
 }
 
