--- a/src/assets/scss/_chartOptions.scss
+++ b/src/assets/scss/_chartOptions.scss
@@ -7,6 +7,8 @@
 
     .openicons{
         margin-right: 4%;
+
+        
     }
 
     .icontoggle {
@@ -37,6 +39,11 @@
 
         #collapse-n {
             transition: all .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+             
+        //    .btn-secondary {
+        //     background-color: transparent !important;
+        //    }
+        
         }
 
         .arrow-btn {
@@ -59,6 +66,8 @@
             transform : rotate(180deg);
 
         }
+
+      
 
     }
 }
