--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -1,23 +1,13 @@
 /*home page starts*/
 .home-page {
    
-    background      : var(--bg-inner-color);
+    background-color      : var(--bg-inner-color);
     height: 100vh;
     
 
-    .btn-bg-transparent {
-        background-color: transparent !important;
-        border-color    : transparent !important;
-    }
     
-    .home-nav {
-        display    : flex;
-        align-items: center;
-    }
-
     #dropdownhome {
         .btn {
-            background-color: transparent;
             border          : 0;
             border-radius   : 0;
             display         : flex;
@@ -27,22 +17,11 @@
                 text-transform: capitalize;
                 font-size: 0.875rem !important;
                 margin-bottom : 0;
-                // color         : var(--main-font-color);
             }
 
         }
-
-        // .dropdown-toggle::after {
-
-        //     margin-left: 1.255em;
-
-        // }
-
         .dropdown-menu {
             z-index              : 1001;
-            background-color     : var(--dropdown-bg-color);
-            // border               : 1px solid var(--dropdown-border-color);
-            //width           : 100%;
             border-radius        : 10px;
             margin               : 0;
             margin-top           : 8px;
@@ -50,22 +29,14 @@
 
             li {
                 padding      : 4px 8px;
-                // border-bottom: 1px solid var(--dropdown-border-color);
-
-                // .dropdown-item::before{
-                //     background-repeat: no-repeat;
-                //     background-position: center;
-                // }
                 .dropdown-item {
                     text-transform  : capitalize;
                     font-size       : var(--font-small);
                     z-index         : 999;
                     color           : var(--fonts-white-shade) !important;
-                    background-color: var(--dropdown-item-bg);
                     width           : 93%;
                     margin          : 0 auto;
                     border-radius   : 10px;
-                    // border          : 1px solid var(--dropdown-border-color);
                     padding: 0.25rem 2.5rem 0.25rem 0.5rem;
                 }
             }
@@ -284,9 +255,7 @@
 
         .content-wrap {
             .home-page-heading {
-                color         : var(--home-main-color);
-                text-transform: uppercase;
-                line-height   : 1.3;
+               
                 font-size     : var(--s-font-heading);
                 margin        : 10px 0;
 
@@ -296,7 +265,6 @@
             }
 
             .home-page-desp {
-                color        : var(--home-main-color);
                 font-size    : 16px;
                 margin-bottom: 10px;
             }
