--- a/src/assets/scss/_summaryNew.scss
+++ b/src/assets/scss/_summaryNew.scss
@@ -7,7 +7,6 @@
   // }
 }
 
-
 .summary-title {
   font-size: var(--font-small);
 }
@@ -15,6 +14,14 @@
 .summary-card-bg {
   background-color: var(--primary-bg-color);
   border-radius: 10px;
+  // max-height: 220px;
+}
+.height-min-36 {
+  min-height: 36px;
+}
+
+.height-36 {
+  height: 36px;
 }
 
 .performance-in-card {
@@ -36,7 +43,7 @@
   font-weight: 700;
   margin: 0 auto;
 
-  p{
+  p {
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
@@ -45,12 +52,16 @@
     text-align: center;
   }
 
-  .big-number{
+  .big-number {
     font-size: 12px !important;
   }
 
-  .biggest-number{
+  .biggest-number {
     font-size: 10px !important;
+  }
+
+  .bigger-number {
+    font-size: 8px !important;
   }
 
   &.red {
@@ -62,8 +73,20 @@
   }
 
   &.orange {
-		background-color: var(--orange-color) !important;
-	}
+    background-color: var(--orange-color) !important;
+  }
+}
+
+.big-number {
+  font-size: 12px !important;
+}
+
+.biggest-number {
+  font-size: 10px !important;
+}
+
+.bigger-number {
+  font-size: 8px !important;
 }
 
 .view-more-btn {
@@ -87,7 +110,7 @@
 }
 
 .summary-view-more-btn:focus,
-.summary-view-more-btn:active{
+.summary-view-more-btn:active {
   background-color: var(--sidebar-main-active-color) !important;
   border: 3px solid var(--sidebar-main-active-color);
 }
@@ -97,18 +120,18 @@
   font-size: var(--font-small);
 }
 
-.emu-status{
+.emu-status {
   overflow: hidden;
-text-overflow: ellipsis;
-display: -webkit-box;
--webkit-line-clamp: 2;
--webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
-.emu-read{
+.emu-read {
   font-size: var(--font-small);
 }
 
-.readMoreBtn{
+.readMoreBtn {
   border: none;
   border-radius: 0px;
   border-bottom: 1px solid var(--text-font-color);
@@ -147,43 +170,36 @@ span {
 
     h6 {
       margin-bottom: 0 !important;
-      font-size: 18px!important;
+      font-size: 18px !important;
       padding-top: 15px !important;
       width: 102% !important;
       border-top: 1px solid transparent !important;
     }
   }
-
-  
 }
 
-.summary-section .card-body{
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+.summary-section .card-body {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
 
-.summary-section{
- 
-
-  .text-center.no-data-error-msg{
+.summary-section {
+  .text-center.no-data-error-msg {
     border-color: transparent !important;
   }
 }
 
-
-.summarypage-nomap .text-center{
+.summarypage-nomap .text-center {
   color: var(-sidebar-maincolor) !important;
   font-size: 18px !important;
-  padding-top:5px !important;
+  padding-top: 5px !important;
   padding-bottom: 5px !important;
   margin-bottom: 25px !important;
   border-radius: 5px !important;
   border: 1px solid var(--border-grey-color) !important;
-  
 }
 
-
-.summarydashboard-page .indicatorCardBody{
+.summarydashboard-page .indicatorCardBody {
   border: 1px solid transparent !important;
 }
 
@@ -193,6 +209,5 @@ span {
 
 .no-data-error-msg {
   font-size: var(--font-small);
-  color    : var(--main-font-color);
+  color: var(--main-font-color);
 }
-
